2010-01-03  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime-autodoc.el (slime-autodoc): Renamed from
	`slime-compute-autodoc'; now also interactive.
	(slime-autodoc-mode): Implement toggling properly. Make modeline
	string "Autodoc" rather than "Eldoc".
	(slime-autodoc-maybe-enable): Adapted accordingly.

2010-01-03  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (sldb-insert-frame-call-to-repl): New function
	for inserting a call to a frame into the REPL. Bound to C-y in SLDB.

2010-01-03  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-arglists.lisp (arglist-index): Return NIL if more
	arguments were provided than are allowed.
	(form-path-to-arglist-path): Adapted accordingly.

	* slime-autodoc.el (autodoc.1 [test]): Add relevant test cases.

2010-01-03  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime-indentation-fu.el, swank-indentation-fu.lisp: Delete
	contrib. Never worked quite right, and the necessary
	infrastructure has since been gone.

2010-01-03  Stas Boukarev  <stassats@gmail.com>

	* swank-asdf.lisp (asdf-system-loaded-p): Don't return a
	generalized boolean, because numbers may be too large for Emacs.

2009-12-30  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime-c-p-c.el (complete-form [test]): Set
	`slime-buffer-package' after changing to lisp-mode because
	changing major-mode kills buffer-local variables.

2009-12-30  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-arglists.lisp (extract-cursor-marker): Fix typo.
	(autodoc): Do not try to display variable content for T and NIL.
	(interesting-variable-p): New helper.

2009-12-29  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime-autodoc.el (slime-compute-autodoc): Revert last change.
	We must return nil to decline.

2009-12-29  Tobias C. Rittweiler  <tcr@freebits.de>

	More cleanup.

	The RP swank:arglist-for-echo-area is now called swank:autodoc.

	* swank-arglists.lisp (autodoc): Renamed from
	arglist-for-echo-area.
	(variable-desc-for-echo-area): Deleted. Above function subsumes